manifest/miniflux.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: miniflux
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: miniflux
  labels:
    app.kubernetes.io/instance: miniflux
    app.kubernetes.io/name: miniflux
    app.kubernetes.io/service: miniflux
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: miniflux
    app.kubernetes.io/name: miniflux
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  namespace: miniflux
  labels:
    app.kubernetes.io/instance: miniflux
    app.kubernetes.io/name: miniflux
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: miniflux
      app.kubernetes.io/instance: miniflux
  template:
    metadata:
      labels: 
        app.kubernetes.io/instance: miniflux
        app.kubernetes.io/name: miniflux
    spec:
      containers: 
        - env:
          - name: BASE_URL
            value: https://rss.<path:stringreplacesecret#domain>
          #- name: CREATE_ADMIN
          #  value: "1"
          - name: LOG_DATE_TIME
            value: "1"
          - name: METRICS_ALLOWED_NETWORKS
            value: <path:stringreplacesecret#ciliumipamcidr>
          - name: METRICS_COLLECTOR
            value: "1"
          - name: OAUTH2_CLIENT_ID
            value: miniflux
          - name: OAUTH2_OIDC_DISCOVERY_ENDPOINT
            value: https://auth.<path:stringreplacesecret#domain>/o/miniflux/.well-known/openid-configuration
          - name: OAUTH2_PROVIDER
            value: oidc
          - name: OAUTH2_REDIRECT_URL
            value: https://rss.<path:stringreplacesecret#domain>/oauth2/oidc/callback
          - name: OAUTH2_USER_CREATION
            value: "1"
          - name: POLLING_FREQUENCY
            value: "15"
          - name: POLLING_SCHEDULER
            value: entry_frequency
          - name: PORT
            value: "80"
          - name: RUN_MIGRATIONS
            value: "1"
          - name: HELPERVAR_POSTGRES_USER
            valueFrom:
              secretKeyRef:
                key: postgresuser
                name: miniflux-configsecrets
          - name: HELPERVAR_POSTGRES_PASSWORD
            valueFrom:
              secretKeyRef:
                key: postgrespassword
                name: miniflux-configsecrets
          - name: DATABASE_URL
            value: "postgres://$(HELPERVAR_POSTGRES_USER):$(HELPERVAR_POSTGRES_PASSWORD)@cluster-01.postgres/miniflux"
          image: ghcr.io/miniflux/miniflux:2.1.2-distroless
          name: main
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux
  namespace: miniflux
spec:
  ingressClassName: ingress-nginx-internal
  rules:
    - host: "rss.acelink.io"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: miniflux
                port:
                  number: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: miniflux
  namespace: miniflux
spec:
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https
  hostnames:
  - "rss.<path:stringreplacesecret#domain>"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: miniflux
      port: 80
